--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "react-slick": "^0.29.0",
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1"
   }
 }
